Foundations for the L-System viewer application

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,13 @@ name = "rust-lsystem"
 version = "0.1.0"
 authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
 
-[[bin]]
-name = "rust-lsystem"
-
 [lib]
 name = "rustlsystem"
 path = "src/lib.rs"
+
+[[bin]]
+name = "rustlsystem-viewer"
+path = "src/bin/main.rs"
+
+[dependencies]
+# piston_window = "0.33.0"
