--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ name = "rustlsystem-viewer"
 path = "src/bin/main.rs"
 
 [dependencies]
+time = "0.1.34"
+simple_parallel = "0.3"
 # piston_window = "0.33.0"
